compiler/tests/en/errors/variant_min_arity.salam
// EXPECT: E001
func main:
    x := 1 as Variant<i32>
    println x
end
